// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createFormField(TestField) <TestField { name } /> should render only wrapped input field with defaults 1`] = `
<div
  className="form-item"
>
  <input
    inputId="id_input_name"
    name="INPUT_NAME"
    type="text"
  />
</div>
`;

exports[`createFormField(TestField) <TestField { name, label } /> should render input and label 1`] = `
<div
  className="form-item"
>
  <label
    htmlFor="id_input_name"
  >
    INPUT_LABEL
  </label>
  <input
    inputId="id_input_name"
    label="INPUT_LABEL"
    name="INPUT_NAME"
    type="text"
  />
</div>
`;

exports[`createFormField(TestField) <TestField { name, label, errors: [FIRST_ERROR, SECOND_ERROR] } /> should render input and label and two error 1`] = `
<div
  className="form-item"
>
  <label
    htmlFor="id_input_name"
  >
    INPUT_LABEL
  </label>
  <input
    errors={
      Array [
        "FIRST_ERROR",
        "SECOND_ERROR",
      ]
    }
    inputId="id_input_name"
    label="INPUT_LABEL"
    name="INPUT_NAME"
    type="text"
  />
  <div
    className="errors-list"
  >
    <div
      className="msg msg--error"
    >
      FIRST_ERROR
    </div>
    <div
      className="msg msg--error"
    >
      SECOND_ERROR
    </div>
  </div>
</div>
`;

exports[`createFormField(TestField) <TestField { name, label, errors: [SINGLE_ERROR] } /> should render input and label and single error 1`] = `
<div
  className="form-item"
>
  <label
    htmlFor="id_input_name"
  >
    INPUT_LABEL
  </label>
  <input
    errors={
      Array [
        "SINGLE_ERROR",
      ]
    }
    inputId="id_input_name"
    label="INPUT_LABEL"
    name="INPUT_NAME"
    type="text"
  />
  <div
    className="msg msg--error"
  >
    SINGLE_ERROR
  </div>
</div>
`;

exports[`createFormField(TestField) <TestField { name, label, placeholder } /> should render input with placeholder and label 1`] = `
<div
  className="form-item"
>
  <label
    htmlFor="id_input_name"
  >
    INPUT_LABEL
  </label>
  <input
    inputId="id_input_name"
    label="INPUT_LABEL"
    name="INPUT_NAME"
    placeholder="INPUT_PLACEHOLDER"
    type="text"
  />
</div>
`;

exports[`createFormField(TestField) <TestField { name, label, placeholder, errors: [FIRST_ERROR, SECOND_ERROR]  } /> should render input with placeholder, label and two errors 1`] = `
<div
  className="form-item"
>
  <label
    htmlFor="id_input_name"
  >
    INPUT_LABEL
  </label>
  <input
    errors={
      Array [
        "FIRST_ERROR",
        "SECOND_ERROR",
      ]
    }
    inputId="id_input_name"
    label="INPUT_LABEL"
    name="INPUT_NAME"
    placeholder="INPUT_PLACEHOLDER"
    type="text"
  />
  <div
    className="errors-list"
  >
    <div
      className="msg msg--error"
    >
      FIRST_ERROR
    </div>
    <div
      className="msg msg--error"
    >
      SECOND_ERROR
    </div>
  </div>
</div>
`;

exports[`createFormField(TestField) <TestField { name, label, placeholder, errors: [SINGLE_ERROR] } /> should render input with placeholder, label and single error 1`] = `
<div
  className="form-item"
>
  <label
    htmlFor="id_input_name"
  >
    INPUT_LABEL
  </label>
  <input
    errors={
      Array [
        "SINGLE_ERROR",
      ]
    }
    inputId="id_input_name"
    label="INPUT_LABEL"
    name="INPUT_NAME"
    placeholder="INPUT_PLACEHOLDER"
    type="text"
  />
  <div
    className="msg msg--error"
  >
    SINGLE_ERROR
  </div>
</div>
`;

exports[`createFormField(TestField) <TestField { name, placeholder } /> should render input with placeholder 1`] = `
<div
  className="form-item"
>
  <input
    inputId="id_input_name"
    name="INPUT_NAME"
    placeholder="INPUT_PLACEHOLDER"
    type="text"
  />
</div>
`;

exports[`createFormField(TestField) <TestField { name, placeholder, errors: [FIRST_ERROR, SECOND_ERROR] } /> should render input with placeholder and two error 1`] = `
<div
  className="form-item"
>
  <input
    errors={
      Array [
        "FIRST_ERROR",
        "SECOND_ERROR",
      ]
    }
    inputId="id_input_name"
    name="INPUT_NAME"
    placeholder="INPUT_PLACEHOLDER"
    type="text"
  />
  <div
    className="errors-list"
  >
    <div
      className="msg msg--error"
    >
      FIRST_ERROR
    </div>
    <div
      className="msg msg--error"
    >
      SECOND_ERROR
    </div>
  </div>
</div>
`;

exports[`createFormField(TestField) <TestField { name, placeholder, errors: [SINGLE_ERROR] } /> should render input with placeholder and single error 1`] = `
<div
  className="form-item"
>
  <input
    errors={
      Array [
        "SINGLE_ERROR",
      ]
    }
    inputId="id_input_name"
    name="INPUT_NAME"
    placeholder="INPUT_PLACEHOLDER"
    type="text"
  />
  <div
    className="msg msg--error"
  >
    SINGLE_ERROR
  </div>
</div>
`;
